<resources>
    <string name="app_name">Quiz</string>
    <string name="dialog_text_quit_application">Do you want to quit the application?</string>

    <string name="dialog_action_yes">YES</string>
    <string name="dialog_action_no">NO</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">CANCEL</string>
    <string name="dialog_action_save">SAVE</string>
    <string name="dialog_action_logout">LOGOUT</string>
    <string name="dialog_action_submit">SUBMIT</string>
    <string name="dialog_action_resend_otp">RESEND OTP</string>
    <string name="dialog_action_proceed">PROCEED</string>
    <string name="dialog_action_ignore">IGNORE</string>
    <string name="dialog_action_update">UPDATE</string>
    <string name="dialog_action_close">CLOSE</string>
    <string name="dialog_action_show_all">SHOW ALL</string>

    <string name="activity_sign_up_hint_full_name">Full Name</string>
    <string name="activity_sign_up_email">Email Address</string>
    <string name="activity_sign_up_mobile">Mobile Number</string>
    <string name="activity_sign_up_password">Password</string>
    <string name="activity_sign_up_confirm_password">Confirm Password</string>
    <string name="activity_sign_up_dob">Date Of Birth</string>
    <string name="activity_sign_up_message">Please enter message</string>
    <string name="activity_sign_up_address">Please enter Your Address</string>
    <string name="activity_sign_up_enter_city">City</string>
    <string name="activity_sign_up_already_registered">Already Registered??</string>
    <string name="activity_sign_up_not_registered">Not Registered??</string>
    <string name="activity_sign_up_button_register">REGISTER</string>
    <string name="activity_button_update">UPDATE</string>
    <string name="activity_sign_up_login">LOGIN</string>

    <string name="activity_sign_in_hint_email">Email Address</string>
    <string name="activity_sign_in_hint_password">Password</string>
    <string name="activity_sign_in_button_submit">SIGN IN</string>
    <string name="activity_sign_in_text_forgot_password">Forgot Password ? </string>
    <string name="activity_sign_in_text_signup">Sign Up</string>
    <string name="activity_sign_in_skip_signin">No thanks, I\&#39;ll skip</string>

    <string name="progress_dialog_text_please_wait">Please wait&#8230;</string>

    <string name="snackbar_text_no_internet_connection_available">No Internet Connection available
    </string>
    <string name="snackbar_text_error_occurred">Error Occurred</string>
    <string name="snackbar_text_exception_occurred">Exception Occurred</string>
    <string name="snackbar_text_invalid_access_pin">Invalid Access PIN</string>

    <string name="snackbar_action_go_to_settings">GO TO SETTINGS</string>
    <string name="snackbar_action_dismiss">DISMISS</string>
    <string name="snackbar_action_retry">RETRY</string>

    <string name="snackbar_action_undo">UNDO</string>



    <string name="please_enter_name">Please enter Name</string>
    <string name="please_enter_full_name">Please enter Name</string>
    <string name="please_enter_email">Please enter Email</string>
    <string name="please_enter_mobile">Please enter Mobile</string>
    <string name="please_enter_valid_email">Please enter valid Email</string>
    <string name="please_enter_message">Please enter message</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="please_enter_new_password">Please enter new confirm password</string>
    <string name="password_did_not_match">Password did\'nt match</string>
    <string name="please_enter_valid_mobile">Please enter valid Mobile</string>
    <string name="please_select_visitor_type">Please select visitor type</string>
    <string name="please_select_state_type">Please select state type</string>
    <string name="please_select_home_type">Please select home type</string>
    <string name="otp_didnt_match">OTP didn\'t match</string>
    <string name="activity_login_text_i_agree">You agree to our Term and Condition and Privacy Policy</string>


    <string name="dialog_text_auto_fill">Do you want to auto fill the details?</string>


    <string name="progress_dialog_text_loading">Loading&#8230;</string>
    <string name="progress_dialog_text_generating_survey">Generating Survey&#8230;</string>
    <string name="progress_dialog_text_logging_out">Logging Out&#8230;</string>
    <string name="progress_dialog_text_logging_in">Logging In&#8230;</string>
    <string name="progress_dialog_text_sending_request">Sending Request&#8230;</string>
    <string name="progress_dialog_text_submitting_responses">Submitting Responses&#8230;</string>
    <string name="progress_dialog_text_initializing">Initializing Application&#8230;</string>

    <string name="activity_do_you_know">Do you Know?</string>
    <string name="activity_point_score">Points for this Question</string>
    <string name="activity_skip">Skip And Next</string>
    <string name="activity_correct_answer">Correct Answer. Your earned point </string>
    <string name="activity_incorrect_answer">Incorrect Answer. Correct Answer is</string>
    <string name="activity_home">You want to go to Home Page.</string>
    <string name="activity_earned_points">Total Earned Points</string>

</resources>
