<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/clMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:visibility="visible">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar1"
                    style="@style/Widget.MyApp.ActionBar"
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/toolbar_bg"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed">

                    <RelativeLayout
                        android:id="@+id/toolbar_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/ivBack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:paddingBottom="@dimen/activity_margin_small"
                            android:paddingTop="@dimen/activity_margin_small"
                            android:src="@drawable/ic_back"
                            android:visibility="visible"/>
                        <TextView
                            android:id="@+id/tvTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/ivBack"
                            android:layout_toRightOf="@+id/ivBack"
                            android:gravity="center"
                            android:text="ENQUIRY"
                            android:textColor="@color/text_color_white"
                            android:textSize="@dimen/text_size_large"
                            android:textStyle="bold"/>
                    </RelativeLayout>
                </android.support.v7.widget.Toolbar>
            </RelativeLayout>
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBar"
            android:layout_centerInParent="true"
            android:animateLayoutChanges="true">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:animateLayoutChanges="true">



                    <TextView
                        android:id="@+id/tvEnquiryForm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Enquiry Form"
                        android:padding="@dimen/activity_margin_extra_small"
                        android:textStyle="bold"
                        android:textColor="@color/text_color_black"
                        android:textSize="@dimen/text_size_large"
                        />

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/activity_sign_up_hint_full_name"
                        android:inputType="textPersonName"
                        android:layout_below="@+id/tvEnquiryForm"
                        android:lines="1"
                        android:padding="@dimen/edittext_padding"
                        android:textColorHint="@color/hint_text_color"
                        android:textSize="@dimen/text_size_medium"/>

                    <EditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/activity_sign_up_mobile"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLength="15"
                        android:padding="@dimen/edittext_padding"
                        android:layout_below="@+id/etName"
                        android:textColorHint="@color/hint_text_color"
                        android:textSize="@dimen/text_size_medium"/>

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin"
                        android:background="@drawable/edit_text_background"
                        android:hint="@string/activity_sign_in_hint_email"
                        android:inputType="textEmailAddress"
                        android:layout_below="@+id/etPhone"
                        android:lines="1"
                        android:padding="@dimen/edittext_padding"
                        android:textColorHint="@color/hint_text_color"
                        android:textSize="@dimen/text_size_medium"/>

                    <EditText
                        android:id="@+id/etMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin"
                        android:background="@drawable/edit_text_background"
                        android:hint="Message"
                        android:layout_below="@+id/etEmail"
                        android:lines="1"
                        android:padding="@dimen/edittext_padding"
                        android:textColorHint="@color/hint_text_color"
                        android:textSize="@dimen/text_size_medium"/>

                    <TextView
                        android:id="@+id/tvSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin"
                        android:background="@drawable/rounded_button"
                        android:elevation="@dimen/button_elevation"
                        android:gravity="center"
                        android:layout_below="@+id/etMessage"
                        android:padding="@dimen/button_padding"
                        android:text="Submit"
                        android:textColor="@color/text_color_white"
                        android:textSize="@dimen/text_size_extra_large"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvEnquiryCall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_margin"
                        android:background="@drawable/rounded_button"
                        android:elevation="@dimen/button_elevation"
                        android:gravity="center"
                        android:layout_below="@+id/tvSubmit"
                        android:padding="@dimen/button_padding"
                        android:text="Call For Enquiry"
                        android:textColor="@color/text_color_white"
                        android:textSize="@dimen/text_size_extra_large"
                        android:textStyle="bold"/>

                </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>